--- a/Project-0/style.css
+++ b/Project-0/style.css
@@ -21,6 +21,14 @@
     font-size: 50px;
 }
 
+#image_logo {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(12, 133, 207);
+    padding-left: 215px;
+    margin-top: -30px;
+}
+
 #form {
     text-align: center;
     border: 3px solid black;
@@ -29,16 +37,44 @@
 }
 
 #query {
-    width: 500px;
-    height: 35px;
+    width: 575px;
+    height: 45px;
+    border: 1px solid #dcdcdc;
+    border-radius: 30px;
+    font-size: 16px;
 }
 
-#button {
+#query:hover {
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+
+#query:focus-within {
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+    outline:none;
+}
+
+#buttons {
     margin: 20px;
 }
 
-#button > input {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 4px;
-    padding: 5px;
+.button {
+    background-color: #f5f5f5;
+    border:none;
+    color:#707070;
+    font-size:15px;
+    padding: 10px 20px;
+    margin:5px;
+    border-radius:4px;
+    outline:none;
+}
+
+.button:hover{
+    border: 1px solid #c8c8c8;
+    padding: 9px 19px;
+    color:#808080;
+}
+
+.button:focus{
+    border:1px solid #4885ed;
+    padding: 9px 19px;
 }
