--- a/Project-1/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/Project-1/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -12,8 +12,10 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form>
+                <form action="{% url 'search' %}" method="GET">
+                    <!-- {% csrf_token %} -->
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+                    <input type="submit" value="Submit">
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
