Edit page functionality

--- a/Project-1/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/Project-1/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -7,5 +7,8 @@
 {% block body %} 
     
     {{ content |safe }}
+    <div>
+        <a href="{% url 'edit_page' title %}">Edit Page</a>
+    </div>
 
 {% endblock %}
